// DBML generated from provided PostgreSQL schema
// Filename: university_schema.dbml

Enum sex_t {
  M
  F
  O
  m
  f
  o
}

Table faculties {
  faculty_id int [pk, increment]
  name varchar(128) [not null, unique, note: "ext_name_t"]
  dean_worker_id int [unique, null, note: "references workers.worker_id (set by FK)"]
}

Table majors {
  major_id int [pk, increment]
  name varchar(128) [not null, unique]
  code varchar(8) [not null, unique, note: "CHECK: /^[A-Z]{3}-[0-9]{3}$/"]
  faculty_id int [not null, note: "FK -> faculties.faculty_id (ON DELETE RESTRICT, ON UPDATE CASCADE)"]
}

Table courses {
  course_id int [pk, increment]
  code varchar(16) [not null, unique, note: "CHECK: /^[A-Z]{3}-[0-9]{3}-[A-Z]{3}-[0-9]{3}$/"]
  title varchar(128) [not null, note: "ext_name_t"]
  major_id int [not null, note: "FK -> majors.major_id (ON DELETE CASCADE, ON UPDATE CASCADE)"]
  ects_credits smallint [not null, default: 1]
}

Table workers {
  worker_id int [pk, increment]
  first_name varchar(128) [not null, note: "name_t"]
  last_name varchar(128) [not null, note: "name_t"]
  telephone varchar(32) [unique, null, note: "telephone_t -> normalized to E.164 by trigger"]
  email varchar(128) [unique, null, note: "email_t -> lowercased by trigger"]
  sex sex_t [null]
  faculty_id int [null, note: "FK -> faculties.faculty_id (ON DELETE SET NULL, ON UPDATE CASCADE)"]
  teaching boolean [not null, default: false]
}

Table students {
  student_id int [pk, increment]
  first_name varchar(128) [not null, note: "name_t"]
  last_name varchar(128) [not null, note: "name_t"]
  telephone varchar(32) [unique, null, note: "telephone_t -> normalized to E.164 by trigger"]
  email varchar(128) [unique, null, note: "email_t -> lowercased by trigger"]
  sex sex_t [null]
}

Table groups {
  group_id int [pk, increment]
  course_id int [not null, note: "FK -> courses.course_id (ON DELETE CASCADE, ON UPDATE CASCADE)"]
  instructor_worker_id int [not null, note: "FK -> workers.worker_id (ON DELETE SET NULL, ON UPDATE CASCADE) -- original SQL used NOT NULL with ON DELETE SET NULL"]
  code varchar(32) [not null, unique, note: "CHECK: extended course code pattern"]
  day_of_week smallint [not null, note: "CHECK day_of_week BETWEEN 1 AND 7"]
  start_time time [not null]
  end_time time [not null, note: "CHECK end_time > start_time"]
  start_date date [not null]
  end_date date [not null, note: "CHECK end_date >= start_date"]
  }

Table students_to_majors {
  student_id int [not null]
  major_id int [not null]
  semester int [not null, note: "CHECK semester >= 1"]
  Indexes {
    (student_id, major_id) [pk]
  }
}

Table students_to_groups {
  student_id int [not null]
  group_id int [not null]
  Indexes {
    (student_id, group_id) [pk]
  }
}

Table marks {
  mark_id int [pk, increment]
  student_id int [not null, note: "FK -> students.student_id (ON DELETE CASCADE, ON UPDATE CASCADE)"]
  course_id int [not null, note: "FK -> courses.course_id (ON DELETE CASCADE, ON UPDATE CASCADE)"]
  mark smallint [not null, note: "CHECK mark BETWEEN 1 AND 5"]
  weight smallint [default: 1, note: "CHECK weight > 0"]
  added date [default: "now()", note: "CHECK added <= now()"]
}


// Foreign key references (explicit)
Ref: majors.faculty_id > faculties.faculty_id
Ref: courses.major_id > majors.major_id
Ref: workers.faculty_id > faculties.faculty_id
Ref: groups.course_id > courses.course_id
Ref: groups.instructor_worker_id > workers.worker_id
Ref: students_to_majors.student_id > students.student_id
Ref: students_to_majors.major_id > majors.major_id
Ref: students_to_groups.student_id > students.student_id
Ref: students_to_groups.group_id > groups.group_id
Ref: marks.student_id > students.student_id
Ref: marks.course_id > courses.course_id

// Notes:
// - Triggers and functions (email lowercasing, phone normalization, capitalization, overlap checks, etc.)
//   are not expressed in DBML; keep them as DB-level logic in SQL.
// - Some SQL CHECK constraints / trigger behaviours are represented in notes where DBML has no direct equivalent.

